kubernetes/manifests/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: parking-devops-api
  name: parking-devops-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parking-devops-api
  template:
    metadata:
      labels:
        app: parking-devops-api
    spec:
      containers:
      - image: parking-devops-api:latest
        name: parking-devops-api
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
