kubernetes/manifests/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parking-devops-api
  name: parking-devops-api
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: parking-devops-api
