kubernetes/manifests/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parking-devops-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.localhost.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parking-devops-api
            port:
              number: 5000
